docs: 폴더구조 변경

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- 리엑트 부트스트랩 사용 -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+k4J7O0U8mo6J9es5z3zdc5El"
+      crossorigin="anonymous"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
